add evaluate function for backend

--- a/ai/notebooks/evaluate-model.ipynb
+++ b/ai/notebooks/evaluate-model.ipynb
@@ -193,7 +193,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2025-04-27 18:53:13.263\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.data\u001b[0m:\u001b[36mload_data\u001b[0m:\u001b[36m16\u001b[0m - \u001b[1mTask: personal_info_extraction, dataset size: 50 rows\u001b[0m\n"
+      "\u001b[32m2025-04-29 14:27:25.485\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.data\u001b[0m:\u001b[36mload_data_for_personal_info_extraction\u001b[0m:\u001b[36m36\u001b[0m - \u001b[1mLoaded dataset from /Users/shamilarslanov/Projects/MaximLLMArena/tokenblood/ai/data/ai4privacy-many-persons-validation.csv\u001b[0m\n",
+      "\u001b[32m2025-04-29 14:27:25.493\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.data\u001b[0m:\u001b[36mload_data\u001b[0m:\u001b[36m18\u001b[0m - \u001b[1mTask: personal_info_extraction, dataset size: 50 rows\u001b[0m\n"
      ]
     },
     {
@@ -209,7 +210,7 @@
       "- gt_name: ['Narcis', 'Aiza', 'Faverjon Patrick-Marc']\n",
       "\n",
       "Index: 2\n",
-      "- prediction: ['Iouri Menelaos', 'Chayanne', 'Sivalogini']\n",
+      "- prediction: ['Menelaos', 'Iouri', 'Chayanne', 'Sivalogini']\n",
       "- gt_name: ['Menelaos Iouri', 'Chayanne', 'Sivalogini']\n",
       "\n",
       "Index: 3\n",
@@ -221,7 +222,7 @@
       "- gt_name: ['Thevanesan', 'Saliba', 'Dionisa Magbule']\n",
       "\n",
       "Index: 5\n",
-      "- prediction: ['Zaharievska Yushan Marie-Edith', 'Cammarosano Mayar Karunaharan', 'Borde Kely']\n",
+      "- prediction: ['Zaharievska Yushan Marie-Edith', 'Borde Kely', 'Cammarosano Mayar Karunaharan']\n",
       "- gt_name: ['Zaharievska Yushan Marie-Edith', 'Borde Kely', 'Cammarosano Mayar Karunaharan']\n",
       "\n",
       "Index: 6\n",
@@ -229,23 +230,23 @@
       "- gt_name: ['Tanea', 'Leondrit Olivier', 'Baschir Radomir']\n",
       "\n",
       "Index: 7\n",
-      "- prediction: ['Pathmajothy', 'Mohsine', 'Nouriel', 'Miao']\n",
+      "- prediction: ['Pathmajothy', 'Nouriel Mohsine', 'Miao']\n",
       "- gt_name: ['Pathmajothy', 'Mohsine Nouriel', 'Miao']\n",
       "\n",
       "Index: 8\n",
-      "- prediction: ['Stoia', 'Blenda; Kirchmayr Losmaz', 'Elycia; Dutranoy', 'Gasser Ethanaël']\n",
+      "- prediction: ['Stoia', 'Blenda', 'Kirchmayr Losmaz', 'Elycia', 'Dutranoy', 'Gasser Ethanaël']\n",
       "- gt_name: ['Stoia Blenda', 'Kirchmayr Losmaz Elycia', 'Dutranoy Gasser Ethanaël']\n",
       "\n",
       "Index: 9\n",
-      "- prediction: ['Cosmadopoulos', 'Aberash', 'Lorenzon', 'Sulayman']\n",
+      "- prediction: ['Cosmadopoulos Aberash Bajrishe', 'Lorenzon Sulayman', 'Renu']\n",
       "- gt_name: ['Aberash Bajrishe', 'Cosmadopoulos Sulayman', 'Lorenzon Renu']\n",
       "\n",
       "Index: 10\n",
-      "- prediction: ['Lorcan Iasmina', 'Heline Priyanka', 'Athisan', 'Havishe']\n",
+      "- prediction: ['Heline', 'Priyanka', 'Lorcan', 'Iasmina', 'Havishe', 'Athisan']\n",
       "- gt_name: ['Athisan', 'Priyanka Heline', 'Havishe', 'Iasmina Lorcan']\n",
       "\n",
       "Index: 11\n",
-      "- prediction: ['Klucker Necip', 'Voci Clif Lutz Mechkour', 'Nilany Patcharin Tosin Karapsias', 'Willame Fady']\n",
+      "- prediction: ['Klucker Necip', 'Voci Clif Lutz Mechkour', 'Karapsias Patcharin Nilany Tosin', 'Willame Fady']\n",
       "- gt_name: ['San', 'Klucker Necip', 'Voci Mechkour Clif Lutz', 'Tosin Karapsias Patcharin Nilany', 'Willame Fady']\n",
       "\n",
       "Index: 12\n",
@@ -257,15 +258,15 @@
       "- gt_name: ['Liutauras', 'Zillah', 'Emiljo']\n",
       "\n",
       "Index: 14\n",
-      "- prediction: ['ALBERT Jacques', 'BURHANEDIN']\n",
+      "- prediction: ['ALBERT', 'Jacques']\n",
       "- gt_name: ['Burhanedin', 'Maltina', 'Jacques-Albert']\n",
       "\n",
       "Index: 15\n",
-      "- prediction: ['Trémel Kimeta', 'Bargiglione Tsedal', 'Piwali Khed']\n",
+      "- prediction: ['Trémel', 'Kimeta', 'Bargiglione', 'Tsedal', 'Piwali', 'Khed']\n",
       "- gt_name: ['Oneri Kimeta', 'Trémel', 'Bargiglione Tsedal']\n",
       "\n",
       "Index: 16\n",
-      "- prediction: ['Sicard', 'Brayn', 'Habs', 'Wedase', 'Bulfer', 'Ivalina', 'Iervolino', 'Yoshiaki']\n",
+      "- prediction: ['Pujara Sicard', 'Brayn', 'Habs', 'Wedase', 'Tinsae Bulfer', 'Ivalina', 'Iervolino', 'Yoshiaki']\n",
       "- gt_name: ['Pujara Sicard Brayn', 'Habs Wedase', 'Bulfer Ivalina Tinsae', 'Iervolino Yoshiaki']\n",
       "\n",
       "Index: 17\n",
@@ -273,15 +274,15 @@
       "- gt_name: ['Ansumane', 'Kuska Sudharshini', 'Maëla', 'Moréno Farchonda Estervan', 'Marylore Ade']\n",
       "\n",
       "Index: 18\n",
-      "- prediction: ['Zouine Anite', 'Princi Dzavit', 'Rolli', 'Wasf Neelu Rigmi']\n",
+      "- prediction: ['Zouine', 'Anite', 'Princi', 'Dzavit', 'Rolli', 'President', 'Rigmi', 'Neelu Wasf']\n",
       "- gt_name: ['Princi Anite', 'Zouine', 'Rolli Dzavit', 'Wasf Rigmi Neelu']\n",
       "\n",
       "Index: 19\n",
-      "- prediction: ['Grava', 'Reah', 'Lüönd', 'Kayane', 'Lucile', 'Ensieh', 'Saranraj']\n",
+      "- prediction: ['Grava Reah', 'Lüönd Kayane', 'Lucile Ensieh', 'Saranraj']\n",
       "- gt_name: ['Reah', 'Grava Ensieh Lucile', 'Beglie Kayane', 'Lüönd Saranraj']\n",
       "\n",
       "Index: 20\n",
-      "- prediction: ['Pratik', 'Fayed', 'Nzambi', 'Juan']\n",
+      "- prediction: ['Pratik Fayed', 'Nzambi Juan']\n",
       "- gt_name: ['Nzambi', 'Fayed Pratik', 'Juan']\n",
       "\n",
       "Index: 21\n",
@@ -297,7 +298,7 @@
       "- gt_name: ['Bulat', 'Völlmin Meuterlos Salahuddin', 'Rei Petr']\n",
       "\n",
       "Index: 24\n",
-      "- prediction: ['Aypulu Cvetana del Pino', 'Savitskaia Keske Souraya Fahime Adelhardt']\n",
+      "- prediction: ['Aypulu Cvetana del Pino', 'Keske Adelhardt Souraya Fahime Savitskaia']\n",
       "- gt_name: ['Cvetana', 'del Pino Aypulu Souraya Fahime', 'Savitskaia Keske Adelhardt Marivi']\n",
       "\n",
       "Index: 25\n",
@@ -305,7 +306,7 @@
       "- gt_name: ['Yoshio', 'Sannah Ivânia', 'Leko Yigit']\n",
       "\n",
       "Index: 26\n",
-      "- prediction: ['Huguenet Raxmo', 'Arris Maxie', 'Szilàgyi Corie', 'Cassini Zilvinas', 'Sorcha Anna-Lisa', 'Batnini Louison Géssica', 'Samantha Natalizia']\n",
+      "- prediction: ['Huguenet Raxmo', 'Filgueira de Lieme Maxie', 'Szilàgyi Corie', 'Cassini Zilvinas', 'Sorcha Anna-Lisa', 'Géssica Batnini Louison', 'Samantha Natalizia']\n",
       "- gt_name: ['Joss Elenora', 'Raxmo', 'Huguenet Corie', 'Maxie', 'Filgueira de Lieme Arris Zilvinas', 'Roland', 'Kalarajany', 'Szilàgyi Anna-Lisa Sorcha', 'Cassini Louison Géssica', 'Batnini Natalizia Samantha']\n",
       "\n",
       "Index: 27\n",
@@ -313,7 +314,7 @@
       "- gt_name: ['Gotthelf', 'Yentar Bia', 'Reinmar']\n",
       "\n",
       "Index: 28\n",
-      "- prediction: ['Willibrordus', 'Avik', 'Tawin', 'Ralph', 'Tymofii']\n",
+      "- prediction: ['Willibrordus Avik', 'Tawin Ralph', 'Tymofii']\n",
       "- gt_name: ['Avik Willibrordus', 'Ralph Tawin', 'Tymofii']\n",
       "\n",
       "Index: 29\n",
@@ -321,27 +322,27 @@
       "- gt_name: ['Ferlisi Ninorta', 'Calzaferri Latifa', 'Gheju Daya']\n",
       "\n",
       "Index: 30\n",
-      "- prediction: ['Giorgos', 'Isad', 'Birdal', 'Qader']\n",
+      "- prediction: ['Giorgos Isad', 'Birdal']\n",
       "- gt_name: ['Isad Giorgos', 'Birdal', 'Qader']\n",
       "\n",
       "Index: 31\n",
-      "- prediction: ['Bezler Lourival', 'Gallera Lorjan Mirvan', 'Scheinig Corine Meas']\n",
+      "- prediction: ['Bezler', 'Lourival', 'Gallera', 'Lorjan', 'Scheinig', 'Corine']\n",
       "- gt_name: ['Bezler Lourival', 'Gallera Lorjan Mirvan', 'Scheinig Corine Meas']\n",
       "\n",
       "Index: 32\n",
-      "- prediction: ['Yungdrung Falk', 'Beggah Pece Theivikanathan Modrusan']\n",
+      "- prediction: ['Yungdrung Falk', 'Theivikanathan Pece', 'Beggah Modrusan']\n",
       "- gt_name: ['Falk', 'Yungdrung Tharjini', 'Theivikanathan Modrusan Beggah Pece']\n",
       "\n",
       "Index: 33\n",
-      "- prediction: ['ETIENNE Jacques', 'NISHANTHAN']\n",
+      "- prediction: ['ETIENNE', 'Jacques; NISHANTHAN', '']\n",
       "- gt_name: ['Siim', 'Jacques-Etienne', 'Nishanthan']\n",
       "\n",
       "Index: 34\n",
-      "- prediction: ['Bortolo', 'Novica', 'Jeyanthimala', 'Omrane']\n",
+      "- prediction: ['Bortolo Novica', 'Jeyanthimala', 'Omrane']\n",
       "- gt_name: ['Bortolo Novica', 'Jeyanthimala', 'Omrane']\n",
       "\n",
       "Index: 35\n",
-      "- prediction: ['Terziario Lenio', 'Veliqi Benedikta', 'Klaue Faggiani Farshad']\n",
+      "- prediction: ['Terziario Lenio', 'Veliqi Benedikta', 'Klaue Farshad Przemyslaw Faggiani']\n",
       "- gt_name: ['Terziario Lenio Felizian', 'Veliqi Benedikta', 'Klaue Faggiani Farshad Przemyslaw']\n",
       "\n",
       "Index: 36\n",
@@ -349,7 +350,7 @@
       "- gt_name: ['Hajvazi Shpendije', 'Taubitz Zocca Aycin Patrice', 'Hönig Yamini', 'Grobert Besevic Xiaohan']\n",
       "\n",
       "Index: 37\n",
-      "- prediction: ['Röösli Brantschen', 'Dhyana Anaé', 'Pierre-Hugues Daliposki']\n",
+      "- prediction: ['Röösli Daliposki', 'Pierre-Hugues', 'Brantschen Anaé', 'Dhyana']\n",
       "- gt_name: ['Dhyana Anaé', 'Anpalagan', 'Daliposki Röösli Brantschen Pierre-Hugues']\n",
       "\n",
       "Index: 38\n",
@@ -381,7 +382,7 @@
       "- gt_name: ['Tias', 'Vilas Chabrowski Pratheepa Yania', 'Youssouph']\n",
       "\n",
       "Index: 45\n",
-      "- prediction: ['Zinkl', 'Aulan', 'Bekteshi', 'Lodoe', 'Mahdhi']\n",
+      "- prediction: ['Zinkl Aulan', 'Bekteshi Lodoe', 'Mahdhi']\n",
       "- gt_name: ['Aulan', 'Zinkl Bekteshi Lodoe', 'Mahdhi Hailat']\n",
       "\n",
       "Index: 46\n",
@@ -389,11 +390,11 @@
       "- gt_name: ['Soaad', 'Topolnicianu Klodi', 'Archini Viviani Redife']\n",
       "\n",
       "Index: 47\n",
-      "- prediction: ['Elkord Mehar', 'Brokatzky Lalith', 'Antropoli Falzetta Franc']\n",
+      "- prediction: ['Elkord Mehar', 'Brokatzky Lalith', 'Antropoli Franc Di Mito Falzetta']\n",
       "- gt_name: ['Elkord Mehar Agrin', 'Brokatzky Lalith', 'Di Mito Antropoli Falzetta Franc']\n",
       "\n",
       "Index: 48\n",
-      "- prediction: ['Stanca', 'Arezo', 'Subanu', 'Stojne']\n",
+      "- prediction: ['Stanca Arezo', 'Stojne', 'Subanu']\n",
       "- gt_name: ['Subanu', 'Stojne', 'Arezo Stanca']\n",
       "\n",
       "Index: 49\n",
@@ -405,7 +406,7 @@
     {
      "data": {
       "text/plain": [
-       "EvaluationResult(accuracy_score=0.32967032967032966, true_positives=60, false_positives=120, false_negatives=2, dataset_size=50)"
+       "EvaluationResult(accuracy_score=0.2864864864864865, true_positives=53, false_positives=130, false_negatives=2, dataset_size=50)"
       ]
      },
      "execution_count": 4,
